# demo-stream-urls-server

./: .editorconfig  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: test.yml
docker/: Dockerfile  docker-compose.yml
src/dm_stream_urls_server/: __init__.py  __main__.py  api.py  cache.py  config.py  stream.py  token.py
src/dm_stream_urls_server/demo/: index.html
tests/fixtures/: creds.json
tests/unit/: test_api.py  test_cache.py  test_stream.py  test_token.py
